YUG switch to communist & increased resistance, ITA decisions, equalized Counter Intel from ideas, AI improvements & fixes
-Better AI advisors choice. for JAP, GER & ITA
-Allowed AI to do some NFs which it previously never would.
-AI Spain less strong after CW, but improved Compliance gain from 26 points.
-AI strategies for volunteers: SPA Div Azul & SOV to Rep Spain, etc.
-Took away requirements Transport planes for Intel Ops: AI doesn´t make them.

-Added traits to Tito & De Gaulle.
-Small improvements/fixes Post War Europe Allied Win; Tito's YUG will join SOC faction.
-Switched cores to claims MAN gains from 'Restore the Empire' NF (not puppet of JAP part of FT)

-Small improvements HUN & ROM NFs
-Enabled BUL refusing weapon restrictions if FRA capitulated (compensate for hist AI not joining Axis till later)
-No coup against Mussolini & Salo if Germany invading ITA.
-Improved ITA for decisions: AI, triggers, costs & effects.
-Austria will start with less Fascist popularity.
-If USA declares on Mex for nationalisation of oil, MEX will create its own faction so it doesn´t join Allies, triggering war USA vs Allies.

-Fixed Fate of CZE:
--fixed not being able to partition with HUN.
--Fixed Zoalzie going to POL
-Fixed 2nd Goods Shortage idea triggering many times.

-Loc improvements.
-Various Fixes

Signed-off-by: Bramja <bramja@hotmail.com>

--- a/bicemodded/localisation/english/diplomacy_l_english.yml
+++ b/bicemodded/localisation/english/diplomacy_l_english.yml
@@ -1342,3 +1342,5 @@
  SOV_support_for_exiles:0 "Support for the exiles"
  SOV_fourth_international_good:0 "Supports the Fourth International"
  SOV_fourth_international_bad:0 "Follower of the Stalinist Doctrine"
+ SOV_fourth_international_threat:0 "Renewed attempts at World Revolution"
+ ITA_Guernica_threat:0 "Bombing of Guernica"
