--- a/bicemodded/localisation/english/events_l_english.yml
+++ b/bicemodded/localisation/english/events_l_english.yml
@@ -994,7 +994,7 @@
  news.13.e:0 "A pity. It would have kept the Bolsheviks busy."
  news.13.f:0 "Our comrades show their strength!"
  news.14.t:0 "[SOV.GetNameDefCap] Annexes [TAN.GetNameDef]"
- news.14.d:0 "In a press release earlier today, Moscow announced the formal annexation of [TAN.GetNameDef]. \n\nThe Supreme Soviet agreed to a request from the Tuvan parliament for membership in the USSR. \n\nThe small Tuvan People's Republic, which had only been officially recognized by the Soviet Union and Mongolia, will be organized as an autonomous oblast."
+ news.14.d:0 "/nIn a press release earlier today, Moscow announced the formal annexation of [TAN.GetNameDef]. \n\nThe Supreme Soviet agreed to a request from the Tuvan parliament for membership in the USSR. \n\nThe small Tuvan People's Republic, which had only been officially recognized by the Soviet Union and Mongolia, will be organized as an autonomous oblast."
  news.14.a:0 "Tannu what?"
  news.14.b:0 "They will be better off."
  news.15.t:0 "Second Vienna Award"
@@ -1733,17 +1733,17 @@
  news.223.e:0 "Such action will upset the balance in Europe."
  news.223.f:0 "Will they really chance an intervention?"
  news.224.t:0 "[ENG.GetNameDefCap] Pressures [Spain.GetNameDef]"
- news.224.d:0 "With the tradition of British influence in the Mediterranean projected from Gibraltar, it should come as no surprise that the [ENG.GetAdjective] government has decided to put political pressure on the fascist government in [Spain.GetNameDef].\n\nStill rebuilding from their civil war, [ENG.GetAdjective] support is far more important than political principles."
+ news.224.d:0 "/nWith the tradition of British influence in the Mediterranean projected from Gibraltar, it should come as no surprise that the [ENG.GetAdjective] government has decided to put political pressure on the fascist government in [Spain.GetNameDef].\n\nStill rebuilding from their civil war, [ENG.GetAdjective] support is far more important than political principles."
  news.224.a:0 "We must accept their diplomatic mission."
  news.224.b:0 "Who do the [ENG.GetAdjective] think they are?"
  news.224.c:0 "The [ENG.GetAdjective] are exerting their influence."
  news.225.t:0 "[ENG.GetNameDefCap] Exerts Influence in [TUR.GetNameDef]"
- news.225.d:0 "The Mediterranean has long been a region of great strategic value to the imperial influence of [ENG.GetNameDef]. Now the [ENG.GetAdjective] government is looking for further support from countries in the region. To that end they have appointed a "special consul to the [TUR.GetAdjective] state."\n\nConsidering the centuries of fierce competition for naval supremacy in the Mediterranean, whether they are successful in bringing their two countries closer together remains to be seen."
+ news.225.d:0 "/nThe Mediterranean has long been a region of great strategic value to the imperial influence of [ENG.GetNameDef]. Now the [ENG.GetAdjective] government is looking for further support from countries in the region. To that end they have appointed a "special consul to the [TUR.GetAdjective] state."\n\nConsidering the centuries of fierce competition for naval supremacy in the Mediterranean, whether they are successful in bringing their two countries closer together remains to be seen."
  news.225.a:0 "Their diplomatic mission might be useful to us."
  news.225.b:0 "Who do the [ENG.GetAdjective] think they are?"
  news.225.c:0 "The [ENG.GetAdjective] are exerting their influence."
  news.226.t:0 "[ENG.GetNameDefCap] Exerts Influence in [GRE.GetNameDef]"
- news.226.d:0 "The Mediterranean has long been a region of great strategic value to the imperial influence of [ENG.GetNameDef]. Now the [ENG.GetAdjective] government is looking for further support from countries in the region. To that end they have appointed a "special consul to the [GRE.GetAdjective] state."\n\nMore than a century after Lord Byron's participation in the Greek War for Independence, whether [ENG.GetNameDef] is successful remains to be seen."
+ news.226.d:0 "/nThe Mediterranean has long been a region of great strategic value to the imperial influence of [ENG.GetNameDef]. Now the [ENG.GetAdjective] government is looking for further support from countries in the region. To that end they have appointed a "special consul to the [GRE.GetAdjective] state."\n\nMore than a century after Lord Byron's participation in the Greek War for Independence, whether [ENG.GetNameDef] is successful remains to be seen."
  news.226.a:0 "Their diplomatic mission might be useful to us."
  news.226.b:0 "Who do the [ENG.GetAdjective] think they are?"
  news.226.c:0 "The [ENG.GetAdjective] are exerting their influence."
@@ -3469,7 +3469,7 @@
  britain.101.a:0 "We gladly accept"
  britain.101.b:0 "It's not necessary"
  news.1250.t:0 "Remilitarization Of The Straits" 
- news.1250.d:0 "With the new Straits Convention signed after two-month meetings, Turkey's restrained rights have been restored and the sovereignty of the Straits region has passed into Turkey. As a result, the Straits was left unconditionally to the Republic of Turkey, and the right to build fortifications was granted. \n\nThe Turkish Government will keep an eye on the contract to ensure that every provision concerning the passage of battleships from the Straits is carried out."
+ news.1250.d:0 "/n/nWith the new Straits Convention signed after two-month meetings, Turkey's restrained rights have been restored and the sovereignty of the Straits region has passed into Turkey. As a result, the Straits was left unconditionally to the Republic of Turkey, and the right to build fortifications was granted. \n\nThe Turkish Government will keep an eye on the contract to ensure that every provision concerning the passage of battleships from the Straits is carried out."
  news.1250.a:0 "A fair peace" 
  news.1250.b:0 "Straits will remain under Turkish sovereignty!"
  news.1251.t:0 "Hatay goes to referendum" 
