--- a/bicemodded/localisation/english/ideas_l_english.yml
+++ b/bicemodded/localisation/english/ideas_l_english.yml
@@ -158,7 +158,7 @@
  race_for_the_bomb_outclassed_desc:0 "Another nation has beaten us to the bomb. We must redouble our efforts at any cost, to achieve strategic security and lessen the national embarrassment."
  SWI_militia_army:0 "Militia Army"
  SWI_militia_army_desc:0 "Our Militia Army will defend our country at all cost!"
- SWI_great_depression:0 "Great Depression"
+ SWI_great_depression:0 "§OGreat Depression§!"
  SWI_great_depression_desc:0 "Even we as a small country suffer from the global crisis."
  SWI_currency_reformed:0 "Currency Reformed"
  SWI_currency_reformed_desc:0 "Even if it means we weaken our currency in the short term it will pay off in the long run."
@@ -184,7 +184,7 @@
  SOV_Tolkach_idea:0 "Tolkach"
  SOV_STAVKA_idea:0 "STAVKA"
  CHI_rapprochement_with_soviet_union:0 "Mission to the Soviets"
- CHI_occupied:0 "Foreign Occupation"
+ CHI_occupied:0 "§RForeign Occupation§!"
  CHI_occupied_desc:0 "China is under foreign occupation"
  CHI_national_defense_propaganda_busted:0 "National Defense Propaganda Busted"
  CHI_national_defense_propaganda_busted:0 "The campaigns propagandising 'Chinese Unity against aggression' now backfire on us, as we are being perceived as the attacker in the ongoing conflict."
@@ -194,10 +194,10 @@
  JAP_stalemate_XP_desc:0 "The Sino-Japanese war has bogged down into a quagmire due to the extensive size of China and the non-cooperative locals. It is unclear what lessons can be drawn from this."
  
  
- admiral_distrust:0 "Admiral Distrust"
+ admiral_distrust:0 "§OAdmiral Distrust§!"
  admiral_distrust_desc:0 "Admirals distrust in the government, to believe that a staged attack would be blamed on Japan, just for the purpose of involvement in the war is something a true American, would not be proud of."
  HUN_wheat:0 "Wheat Exports"
- HUN_gerdep:0 "Unstable Monarchy"
+ HUN_gerdep:0 "§OUnstable Monarchy§!"
  HUN_turan:0 "Turan Hunters"
  HUN_fraternal3:0 "Fraternal Community"
  HUN_fraternal2:0 "Fraternal Community"
@@ -205,23 +205,23 @@
  consolidate_ff:0 "It will take about a §YYear§! to §YConsolidate§! Horthy's Power"
  HUN_pengo2:0 "Pengo Value Increased"
  HUN_plundered:0 "Plundered National Bank"
- HUN_economic_down:0 "Hungarian Market Crash"
+ HUN_economic_down:0 "§RHungarian Market Crash§!"
  HUN_planning_strong:0 "War Games"
- HUN_extremists:0 "Political Extremists"
- HUN_divided_economies:0 "Divided Economies"
+ HUN_extremists:0 "§8Political Extremists§!"
+ HUN_divided_economies:0 "§ODivided Economies§!"
  HUN_divided_economies_desc:0 "The economical system in Austria and Hungary were different even back in the days of the Habsburgs, now they have diverged for two decades."
  rongoys:0 "Rongoys Garda"
  HUN_planning_strong_2:0 "Hungarian General Staff"
  HUN_milfund:0 "Military Funding"
- HUN_croatia:0 "Split Nation"
- HUN_croatia2:0 "Split Nation"
- HUN_croatia3:0 "Consolidated Nation"
- HUN_croatia4:0 "Greater Hungary"
+ HUN_croatia:0 "§OSplit Nation§!"
+ HUN_croatia2:0 "§OSplit Nation§!"
+ HUN_croatia3:0 "§4Consolidated Nation§!"
+ HUN_croatia4:0 "§GGreater Hungary§!"
  HUN_austrian_domination:0 "Austrian Domination"
  HUN_austrian_domination_desc:0 "Austrian Domination"
  HUN_equal_terms:0 "Equal Terms"
  HUN_equal_terms_desc:0 "Equal Terms"
- HUN_army:0 "Operation Barbarossa"
+ HUN_army:0 "§BOperation Barbarossa§!"
  HUN_ruralpop:0 "Large Rural Population"
  HUN_ruralpop2:0 "Large Rural Population"
  HUN_ruralpop3:0 "Large Rural Population"
@@ -235,8 +235,8 @@
  POL_logistics:0 "Resistance Logistics"
  POL_tempest:0 "Burza"
  POL_navy:0 "Polish Naval Training"
- POL_danzig1:0 "Danzig ist Deutsch"
- POL_danzig2:0 "Gdansk jest Polski"
+ POL_danzig1:0 "§ODanzig ist Deutsch§!"
+ POL_danzig2:0 "§GGdansk jest Polski§!"
  POL_pay:0 "Madagascar Payment"
  FRA_pay:0 "Madagascar Payment"
  POL_huta:0 "Steam Turbines and Steelworks"
@@ -3610,7 +3610,7 @@
  enlist_army_fra:0 "Army Recruitement Campaign"
  finland_daladier:0 "Daladier will §YNot Resign§! if you §GSupport§! §YFinland§!\n\n"
  
- FRA_disjointed_government:0 "Disjointed Government"
+ FRA_disjointed_government:0 "§ODisjointed Government§!"
  FRA_disjointed_government_desc:0 "The state of French politics is far from stable. While reforms are needed and welcome, the nation is divided and getting drawn into a conflict would put it at great risk."
  FRA_protected_by_the_maginot_line:0 "Protected by the Maginot Line"
  FRA_protected_by_the_maginot_line_desc:0 "Having fortified the border gives France the opportunity to plan and prepare carefully, but it does sacrifice some flexibility in the event of something unexpected."
@@ -3693,7 +3693,7 @@
  harry_white:0 "Harry White"
  USA_henry_morgenthau:0 "Henry Morgenthau"
  
- JAP_tora_tora_winner:0 "Tora Tora Tora!"
+ JAP_tora_tora_winner:0 "§BTora Tora Tora!§!"
  JAP_tora_tora_winner_desc:0 "Operation Z must begin, the beginning of the conquest of the Pacific!"
  
  
@@ -3701,7 +3701,7 @@
  weak_navy:0 "Kriegsmarine Field Divisions"
  weak_air:0 "Luftwaffe Field Divisions"
  
- ENG_commonwelth_crack_sea:0 "Commonwealth Losses"
+ ENG_commonwelth_crack_sea:0 "§OCommonwealth Losses§!"
  ENG_commonwelth_crack_sea_desc:0 "The commonwealth members look in disarray at recent losses and their overlord's inability to safeguard the realm."
  
  springfield_armory_and_rock_island_arsenal_idea:0 "Expanded Springfield Armory and Rock Island Arsenal"
@@ -3741,9 +3741,9 @@
  ITA_paolo_thaon_di_revel:0 "Paolo Thaon di Revel"
  ITA_Corpo_truppe_volontarie_focus:0 "Corpo Truppe Volontarie"
  colonial_empire_lost:0 "§RColonial Empire Lost§!"
- colonial_empire_lost_desc:0 "Instead of recreating the Roman Empire, we have lost the small imperium we had. The people are loosing faith in their leaders!\n§BThis idea can be removed by reconquering Tripoli, Benghazi and Derna§!"
+ colonial_empire_lost_desc:0 "Instead of recreating the Roman Empire, we have lost the small imperium we had. The people are loosing faith in their leaders!\n§4This idea can be removed by reconquering Tripoli, Benghazi and Derna§!"
  ENG_colonial_empire_lost:0 "§RLifeline of the Empire Cut§!"
- ENG_colonial_empire_lost_desc:0 "As we have lost control of the two strategic straits of Suez and Malacca, the lifeline of the British Empire has been cut. This will significantly reduce our standing in the world as well as the will and capability to run the war economy and preserve the Empire. However Britain itself shall not fall!\n§BThis idea can be removed by reconquering Singapore, Cairo and Alexandria§!"
+ ENG_colonial_empire_lost_desc:0 "As we have lost control of the two strategic straits of Suez and Malacca, the lifeline of the British Empire has been cut. This will significantly reduce our standing in the world as well as the will and capability to run the war economy and preserve the Empire. However Britain itself shall not fall!\n§4This idea can be removed by reconquering Singapore, Cairo and Alexandria§!"
  ITA_german_millitary_cooperation_focus:0 "German Military Cooperation"
  ITA_german_millitary_cooperation_focus_desc:0 "We have much to learn from the German officers..."
  JAP_Kaigun_shinko_doctrine:0 "Kaigun Shinkō"
@@ -3765,24 +3765,24 @@
  ENG_maxwell_aitken:0 "Maxwell Aitken"
  ENG_leslie_hore_belisha:0 "Leslie Hore-Belisha"
  ENG_ernest_bevin:0 "Ernest Bevin"
- ENG_the_war_to_end_all_wars:0 "The War to End All Wars"
+ ENG_the_war_to_end_all_wars:0 "§OThe War to End All Wars§!"
  ENG_the_war_to_end_all_wars_desc:0 "With the Great War in recent memory, both the nation's people and leaders are reluctant to send another generation to die in the trenches."
- ENG_beach:0 "Never surrender!"
- ENG_compass:0 "Operation Compass"
- ENG_crusader:0 "Operation Crusader"
- ENG_supercharge:0 "Operation Supercharge"
- ITA_aida:0 "Operation Aida"
- ITA_sonnenblume:0 "Operation Sunflower"
- GER_aida:0 "Operation Aida"
- GER_sonnenblume:0 "Operation Sunflower"
+ ENG_beach:0 "§4Never surrender!§!"
+ ENG_compass:0 "§BOperation Compass§!"
+ ENG_crusader:0 "§BOperation Crusader§!"
+ ENG_supercharge:0 "§BOperation Supercharge§!"
+ ITA_aida:0 "§BOperation Aida"
+ ITA_sonnenblume:0 "§BOperation Sunflower"
+ GER_aida:0 "§BOperation Aida§!"
+ GER_sonnenblume:0 "§BOperation Sunflower§!"
  communist_pressure:0 "Communist pressure"
- rhineland_challenge_met:0 "Rhineland Challenge Met"
+ rhineland_challenge_met:0 "§ORhineland Challenge Met§!"
  rhineland_challenge_met_desc:0 "After predictions that the Rhineland could be remilitarized without Allied intervention, Germany ended up pressured to back down after this turned out to be a mistake."
- fascist_revolutionaries:0 "Fascist Revolutionaries"
+ fascist_revolutionaries:0 "§OFascist Revolutionaries§!"
  fascist_revolutionaries_desc:0 "If support for Fascism rises above 70%, the nation will be plunged into civil war. If support for Fascism drops below 30%, revolutionary activity will stop."
- communist_revolutionaries:0 "Communist Revolutionaries"
+ communist_revolutionaries:0 "§OCommunist Revolutionaries§!"
  communist_revolutionaries_desc:0 "If support for Communism rises above 70%, the nation will be plunged into civil war. If support for Communism drops below 30%, revolutionary activity will stop."
- democratic_revolutionaries:0 "Democratic Revolutionaries"
+ democratic_revolutionaries:0 "§ODemocratic Revolutionaries§!"
  democratic_revolutionaries_desc:0 "If support for Democracy rises above 70%, the nation will be plunged into civil war. If support for Democracy drops below 30%, revolutionary activity will stop."
  home_of_the_free:0 "Home of the Free"
  home_of_the_free_desc:0 "USA considers itself a bastion and maybe even the cradle of democracy and liberty. Whatever they choose to be, their values are difficult to compromise, however tempting some opportunities might seem."
@@ -5402,8 +5402,8 @@
  
  BRA_unstable_republic_2:0 "Third Brazilian Republic"
  BRA_unstable_republic_2_desc:0 "President Getulio Vargas has declared a state of emergenecy after a communist coup attempt was discovered. For now the constitution won't be in effect and the president will rule by decree, centralising power in his person."
- BRA_unstable_republic_2:0 "Fourth Brazilian Republic"
- BRA_unstable_republic_2_desc:0 "The recent political liberalisation made Brazil a more democratic nation. However the instability in the political scene of the last decades has not disappeared, with the military not willing not give up its power. Therefore the 'Fourth Republic' might later known as the as the 'Populist Republic'."
+ BRA_unstable_republic_3:0 "Fourth Brazilian Republic"
+ BRA_unstable_republic_3_desc:0 "The recent political liberalisation made Brazil a more democratic nation. However the instability in the political scene of the last decades has not disappeared, with the military not willing not give up its power. Therefore the 'Fourth Republic' might later known as the as the 'Populist Republic'."
  
  POR_unreliable_army:0 "§RUnreliable Army§!"
  POR_unreliable_army_desc:0 "With the constant coups and counter-coups since the implementation of the Republic in 1910, Army officers are more preoccupied with politics than with keeping discipline and promoting training in the army. The rank and file is demoralized, poorly equipped and poorly trained."
@@ -5520,27 +5520,27 @@
  NOR_kristian_k_laake:0 "Kristian Laake"
  
  FIN_improved_tools:0 "Improved Tools"
- FIN_cause:0 "Bring the Troops Home!"
+ FIN_cause:0 "§RBring the Troops Home!§!"
  FIN_cause_desc:0 "Our people are unhappy with the overextended conquest and how we treat our PoWs, the War was supposed to be over Karelia, not a brutal invasion costing thousands of lives! §YRemoved by Focuses or losing control of key states.§!"
- FIN_cause2:0 "Bring the Troops Home!"
+ FIN_cause2:0 "§OBring the Troops Home!§!"
  FIN_cause2_desc:0 "Our people are unhappy with the overextended conquest and how we treat our PoWs, the War was supposed to be over Karelia, not a brutal invasion costing thousands of lives! §YRemoved by Focuses or losing control of key states.§!"
- FIN_cause3:0 "Unnecessary War"
+ FIN_cause3:0 "§8Unnecessary War§!"
  FIN_cause3_desc:0 "Our people are unhappy with the overextended conquest and how we treat our PoWs, the War was supposed to be over Karelia, not a brutal invasion costing thousands of lives! §YRemoved by Focuses or losing control of key states.§!"
- ROM_industry:0 "Industrial Growth"
- ROM_industry2:0 "Five Year Plan"
+ ROM_industry:0 "§GIndustrial Growth§!"
+ ROM_industry2:0 "§GFive Year Plan§!"
  ROM_goldage:0 "Massive Oil Exports"
  
  SOV_unitslessons:0 "You will receive 15 §YProletariat Divisions!§!"
- SOV_lost:0 "Shattered Union"
- SOV_lost2:0 "Shattered Union"
- SOV_lost3:0 "Shattered Union"
- SOV_lost4:0 "Shattered Union"
- SOV_lost5:0 "Shattered Union"
+ SOV_lost:0 "§RShattered Union§!"
+ SOV_lost2:0 "§RShattered Union§!"
+ SOV_lost3:0 "§OShattered Union§!"
+ SOV_lost4:0 "§8Shattered Union§!"
+ SOV_lost5:0 "§YShattered Union§!"
  SOV_terror:0 "Luftwaffe Terror Bombings"
- SOV_anarchy:0 "Total Anarchy"
+ SOV_anarchy:0 "§RTotal Anarchy§!"
  SOV_look:0 "Bright Future Ahead"
  SOV_industry:0 "Industrial Revival"
- SOV_terror_ger:0 "Luftwaffe Terror Bombings"
+ SOV_terror_ger:0 "§OLuftwaffe Terror Bombings§!"
  GER_terrorbomb1:0 "Begin the Terror Bombings"
  GER_terrorbomb2:0 "End the Terror Bombings"
  eastern_front_peace:0 "§YArmistice§! on the §YEast§! was signed"
@@ -5553,10 +5553,10 @@
  JAP_initialadvance:0 "Initial Advance"
  JAP_initialadvance2:0 "Taiyuan Offensive"
  
- SYR_war:0 "Operation Exporter"
- SYR_no_join:0 "Weak Vichy Garrison"
+ SYR_war:0 "§BOperation Exporter§!"
+ SYR_no_join:0 "§8Weak Vichy Garrison§!"
  USA_credit_soviet:0 "US Funding"
- POL_thrive:0 "Thriving Economy"
+ POL_thrive:0 "§GThriving Economy§!"
  POL_thrive_desc:0 "Is removed at §RWar§!"
  POL_kop_tt2:0 "You will receive §Y8 KOP§! divisions at the §CStart of the War§!"
  POL_military:0 "Military Dominance in the East"
@@ -5567,18 +5567,18 @@
  CZE_sokol:0 "Sokol Movement"
  CZE_legion2:0 "Czechoslovak Legion"
  CZE_health2:0 "Healthcare Investments"
- CZE_gdp1:0 "Great Depression"
+ CZE_gdp1:0 "§RGreat Depression§!"
  CZE_gdp1_desc:0 "Although a worldwide phenomenon, the Great Depression started with a stock market crash in the United States and has caused unemployment rates to soar and tax revenue to plummet. Many factories in [ROOT.GetName] are currently shut down due to bankruptcies and lack of investments in the aftermath of the great depression."
- CZE_gdp2:0 "Great Depression"
+ CZE_gdp2:0 "§OGreat Depression§!"
  CZE_gdp2_desc:0 "Although a worldwide phenomenon, the Great Depression started with a stock market crash in the United States and has caused unemployment rates to soar and tax revenue to plummet. Many factories in [ROOT.GetName] are currently shut down due to bankruptcies and lack of investments in the aftermath of the great depression."
- CZE_gdp3:0 "Great Depression"
+ CZE_gdp3:0 "§8Great Depression§!"
  CZE_gdp3_desc:0 "Although a worldwide phenomenon, the Great Depression started with a stock market crash in the United States and has caused unemployment rates to soar and tax revenue to plummet. Many factories in [ROOT.GetName] are currently shut down due to bankruptcies and lack of investments in the aftermath of the great depression."
- CZE_gdp4:0 "Great Depression"
+ CZE_gdp4:0 "§YGreat Depression§!"
  CZE_gdp4_desc:0 "Although a worldwide phenomenon, the Great Depression started with a stock market crash in the United States and has caused unemployment rates to soar and tax revenue to plummet. Many factories in [ROOT.GetName] are currently shut down due to bankruptcies and lack of investments in the aftermath of the great depression."
- CZE_divided_nation_2:0 "Divided Nation"
+ CZE_divided_nation_2:0 "§RDivided Nation§!"
  CZE_garrison:0 "Better Garrisoning"
  CZE_staff:0 "Czech Armed Forces"
- CZE_divided_nation3:0 "Divided Nation"
+ CZE_divided_nation3:0 "§8Divided Nation§!"
  ITA_expand_the_repair_yards:0 "Expand the Repair Yards"
  ITA_expand_the_repair_yards_desc:0 "Why build new ships while we could speed up the reparations of the ones we already have?"
  FIN_resistance:0 "Finnishization"
@@ -5587,17 +5587,17 @@
  
  
  
- FRA_great_war:0 "Old Guard Etat-Major"
- FRA_great_war_2:0 "Old Guard Etat-Major"
- FRA_great_war_3:0 "Reorganized Etat-Major"
+ FRA_great_war:0 "§OOld Guard Etat-Major§!"
+ FRA_great_war_2:0 "§8Old Guard Etat-Major§!"
+ FRA_great_war_3:0 "§GReorganized Etat-Major§!"
  USA_spf_cap:0 "Adds §Y9 Special Forces Cap§!"
  paul_tt:0 "Removes 'Slow Decision Maker' trait from Paul Reynaud"
  
- Chinese_war_III:0 "Japanese Invasion of China"
- ENG_sub1:0 "Codename SC 7"
- ENG_sub2:0 "Operation Black May"
- GER_sub1:0 "Atlantic Submarine Blockade"
- GER_sub2:0 "Operation Paukenschlag"
+ Chinese_war_III:0 "§BJapanese Invasion of China§!"
+ ENG_sub1:0 "§BCodename SC 7§!"
+ ENG_sub2:0 "§BOperation Black May§!"
+ GER_sub1:0 "§BAtlantic Submarine Blockade§!"
+ GER_sub2:0 "§BOperation Paukenschlag§!"
  KUR_nuri_dersimi:0 "Nuri Dersimi"
  KUR_kamuran_ali_bedirxan:0 "Kamuran Ali Bedirxan"
  KUR_haji_baba:0 "Haji Baba"
@@ -5614,7 +5614,7 @@
  SIA_cultural_revolution_desc:0 "The Thai Cultural Revolution was a plan of modernisation launched by Prime Minister Phibun. Thai ultranationalism became the most important policy, and 12 Cultural Mandates were gradually written to support this. There will be tensions at first, as we try to tell people to change their ways of life, but eventually they'll get around to tolerating it."
  SIA_autarchy:0 "Mandate Five: Autarchy"
  SIA_autarchy_desc:0 "The fifth Cultural Mandate declares that Thai people should attempt to only consume Thai food, only wear Thai clothes, support the efforts of fellow Thai, support public utilities of the Thai government, and maintain high quality, honest, Thai businesses."
- SIA_free_thai:0 "Free Thai Movement"
+ SIA_free_thai:0 "§OFree Thai Movement§!"
  SIA_free_thai_desc:0 "The so-called Free Thai are collaborating with our enemies and sabotaging our war effort. Some of them are even within our very government, others are diplomats to foreign countries, some are even within our military! They do not seem to believe in our victory, and we'll have to crack down on their activities."
  SIA_pack_elephants:0 "Pack Elephants"
  SIA_pack_elephants_desc:0 "While it would be absurd to ride an elephant into battle in a modern war, it would be foolish to ignore them as beasts of burden! Elephants can carry heavy objects across long distances, they do not require fuel, they are docile, and they are useful for clearing obstacles on roads. All elephants not engaged in necessary activities should be used by the military!"
@@ -5632,10 +5632,10 @@
  BRA_coffee_exports_improved:0 "Coffee Exports"
  BRA_coffee_exports_improved_2:0 "Expanded Coffee Exports"
  BRA_coffee_exports_improved_3:0 "Limited Coffee Exports"
- great_depression_brazil:0 "Great Depression"
- great_depression_brazil_2:0 "Great Depression"
- great_depression_brazil_3:0 "Great Depression"
- BRA_military_restrictions:0 "Military Restrictions"
+ great_depression_brazil:0 "§RGreat Depression§!"
+ great_depression_brazil_2:0 "§OGreat Depression§!"
+ great_depression_brazil_3:0 "§OGreat Depression§!"
+ BRA_military_restrictions:0 "§RMilitary Restrictions§!"
  incompetent_heavy_industry_brazil:0 "Lesser Incompetent Heavy Industry"
  BRA_import_substitution_industrialization:0 "Import Substitution Industrialization"
  BRA_utilise_our_capacity_idea:0 "Utilise our Capacity"
