--- a/bicemodded/localisation/english/traits_l_english.yml
+++ b/bicemodded/localisation/english/traits_l_english.yml
@@ -920,6 +920,8 @@
  disdain_for_politicians_2:0 "Disdain for Politicians"
  queen_of_the_people:0 "Queen of the People"
  leader:0 "Leider"
+ resistance_artist:0 "Resistance Artist"
+ patriotic_guerilla:0 "True Patriot"
  veteran_communist:0 "Veteran Communist"
  adventurous_daredevil:0 "Adventurous Daredevil"
  princess_of_terror:0 "Princess of Terror"
