--- a/bicemodded/localisation/english/wtt_ideas_l_english.yml
+++ b/bicemodded/localisation/english/wtt_ideas_l_english.yml
@@ -7,11 +7,11 @@
  CHI_army_corruption_2_desc:0 "Our armed force are rife with corruption and nepotism. If we want to turn them into a potent fighting force, we will have to engage in a lengthy and expensive program of army reform."
  CHI_army_corruption_3:0 "§YLow Army Corruption§!"
  CHI_army_corruption_3_desc:0 "Our armed force are rife with corruption and nepotism. If we want to turn them into a potent fighting force, we will have to engage in a lengthy and expensive program of army reform."
- CHI_ineffective_bureaucracy:0 "Ineffective Bureaucracy"
+ CHI_ineffective_bureaucracy:0 "§OIneffective Bureaucracy§!"
  CHI_ineffective_bureaucracy_desc:0 "The chaos of the civil war has disrupted the creation of an effective state apparatus. More than a third of available recruits are not drafted, simply because no one knows they exist. Reforming the examination process will ensure that we hire competent people."
- CHI_incompetent_officers:0 "Incompetent Officers"
+ CHI_incompetent_officers:0 "§OIncompetent Officers§!"
  CHI_incompetent_officers_desc:1 "Our officers are not yet up to the task of managing a modern war. Hard lessons will have to be learned before they are truly equal to their counterparts in other nations. Educating them will be part of a bigger programm of army reform."
- CHI_hyper_inflation_none:0 "§BStable Economy§!"
+ CHI_hyper_inflation_none:0 "§4Stable Economy§!"
  CHI_hyper_inflation_none_desc:0 "The economy is showing no signs of trouble."
  CHI_hyper_inflation_1:0 "§GLow Inflation§!"
  CHI_hyper_inflation_1_desc:0 "Our economists have noticed a slight increase in inflation. We should keep an eye on that."
