--- a/bicemodded/localisation/english/parties_l_english.yml
+++ b/bicemodded/localisation/english/parties_l_english.yml
@@ -315,7 +315,9 @@
  ROM_fascism_party:1 "PNC"
  ROM_fascism_party_long:1 "Partidul National Crestin (National Christian Party)"
  ROM_fascism_party2:0 "Garda de Fier"
- ROM_fascism_party2_long:0 "Totul pentru Țară (Everything For the Country Party)"
+ ROM_fascism_party2_long:0 "Totul Pentru Tară (Everything For the Country Party)"
+ ROM_fascism_party3:0 "Ion Antonescu & Garda de Fier"
+ ROM_fascism_party3_long:0 "Ion Antonescu, the Military & Totul Pentru Tară (Everything For the Country Party)"
  ROM_FRN_party:0 "FRN"
  ROM_FRN_party_long:0 "Frontul Renasterii Nationale (Front of National Rebirth)"
  ROM_Antonescu_party:0 "Ion Antonescu & the Military"
@@ -599,7 +601,7 @@
  SAU_neutrality_party:0 "House of Saud"
  YEM_neutrality_party:0 "House of Rassid"
  OMA_neutrality_party:0 "Al Said Dynasty"
- SIK_fascism_party:1 "Young Kashgar Party"  ##Leader Mahmut Muhiti // Muhammad Amin Bughra, approached the Japanese ambassador in 1935 with "a detailed plan proposing the establishment of an 'Eastern Turkestan Republic' under Japanese sponsorship
+ SIK_fascism_party:1 "Young Kashgar Party" #Leader Mahmut Muhiti // Muhammad Amin Bughra, approached the Japanese ambassador in 1935 with "a detailed plan proposing the establishment of an 'Eastern Turkestan Republic' under Japanese sponsorship
  SIK_neutrality_party:0 "KMT"
  SIK_neutrality_party_long:0 "Kuomintang"
  SIK_communism_party:0 "People's Anti-Imperialist Association"
