Minor fixes & improvements etc.
Signed-off-by: Bramja <bramja@hotmail.com>

--- a/bicemodded/localisation/english/events_l_english.yml
+++ b/bicemodded/localisation/english/events_l_english.yml
@@ -747,7 +747,7 @@
  romania.4.d:0 "Germany has been brought in to mediate our territorial dispute with Hungary, and they have wisely decided that Transylvania should remain under Romanian control. The Hungarians are not pleased, but hopefully this will settle the matter once and for all."
  romania.4.a:0 "Transylvania shall remain Romanian."
  romania.5.t:0 "Treaty of Craiova"
- romania.5.d:0 "Bulgarian diplomats have come forward, with German backing, requesting the return of Southern Dobrudja - territory we annexed from them in 1913 after the Second Balkan War. The concessions we have already been forced to make seem to have spurred this request."
+ romania.5.d:0 "Bulgarian diplomats have come forward, with Axis backing, requesting the return of Southern Dobrudja - territory we annexed from them in 1913 after the Second Balkan War. The concessions we have already been forced to make seem to have spurred this request."
  romania.5.a:0 "This will solve the dispute"
  romania.5.b:0 "No, the line must be drawn here!"
  romania.6.t:0 "A Hard Choice"
