--- a/bicemodded/localisation/english/ideas_l_english.yml
+++ b/bicemodded/localisation/english/ideas_l_english.yml
@@ -85,10 +85,12 @@
  big_submarine_yards:0 "Big Submarine Yards"
  huge_submarine_yards:0 "Huge Submarine Yards"
  modern_submarine_yards:0 "Modern Submarine Yards"
- worldwide_goods_shortage:0 "Worldwide Goods Shortage"
+ worldwide_goods_shortage:0 "§8Worldwide Goods Shortage§!"
  worldwide_goods_shortage_desc:0 "It's a hard World!"
- worldwide_goods_shortage_2:0 "Worldwide Goods Shortage"
- worldwide_goods_shortage_2_desc:0 "It's a hard World!"
+ worldwide_goods_shortage_2:0 "§OWidespread Worldwide Goods Shortage§!"
+ worldwide_goods_shortage_2_desc:0 "It's an even harder World!"
+ worldwide_goods_shortage_3:0 "§7Post-War Economic Recovery§!"
+ worldwide_goods_shortage_3_desc:0 "Now that the world is largely at peace, it can start to recover from the devastion that has been wrought.\nThe shift away from a war oriented economy and population will require time and will not be without its own troubles though..."
  idea_license:0 "Specialist License Production"
  idea_license_desc:0 "Good relations allow us to work with the original developers and by doing that we can increase our license production!"
  francesco_cuccia:0 "Francesco Cuccia"
@@ -214,7 +216,7 @@
  HUN_planning_strong_2:0 "Hungarian General Staff"
  HUN_milfund:0 "Military Funding"
  HUN_croatia:0 "§OSplit Nation§!"
- HUN_croatia2:0 "§OSplit Nation§!"
+ HUN_croatia2:0 "§8Split Nation§!"
  HUN_croatia3:0 "§4Consolidated Nation§!"
  HUN_croatia4:0 "§GGreater Hungary§!"
  HUN_austrian_domination:0 "Austrian Domination"
@@ -3710,21 +3712,21 @@
  rock_island_arsenal_idea_desc:0 " "
  american_influence_defence_democratic:0 "US Influence"
  american_influence_drift_democratic:0 "US Influence"
- american_protection_drift_democratic:0 "§BUnder US Protection§!"
+ american_protection_drift_democratic:0 "§5Under US Protection§!"
  american_protection_drift_democratic_desc:0 "If an American country declares war on this country @USA §YUnited States§! can intervene."
- american_protection_defence_democratic:0 "§BUnder US Protection§!"
+ american_protection_defence_democratic:0 "§5Under US Protection§!"
  american_protection_defence_democratic_desc:0 "If an American country declares war on this country @USA §YUnited States§! can intervene."
  american_influence_defence_communism:0 "US Influence"
  american_influence_drift_communism:0 "US Influence"
- american_protection_drift_communism:0 "§BUnder US Protection§!"
+ american_protection_drift_communism:0 "§5Under US Protection§!"
  american_protection_drift_communism_desc:0 "If an American country declares war on this country @USA §YUnited States§! can intervene."
- american_protection_defence_communism:0 "§BUnder US Protection§!"
+ american_protection_defence_communism:0 "§5Under US Protection§!"
  american_protection_defence_communism_desc:0 "If an American country declares war on this country @USA §YUnited States§! can intervene."
  american_influence_defence_fascism:0 "US Influence"
  american_influence_drift_fascism:0 "US Influence"
- american_protection_drift_fascism:0 "§BUnder US Protection§!"
+ american_protection_drift_fascism:0 "§5Under US Protection§!"
  american_protection_drift_fascism_desc:0 "If an American country declares war on this country @USA §YUnited States§! can intervene."
- american_protection_defence_fascism:0 "§BUnder US Protection§!"
+ american_protection_defence_fascism:0 "§5Under US Protection§!"
  american_protection_defence_fascism_desc:0 "If an American country declares war on this country @USA §YUnited States§! can intervene."
  USA_based_mils_tt:0 "The Amount of §GEquipment§! that §YUSSR§! will receive is based on the Military Factory count. Use it to your full §Yadvantage§!!\n"
  USA_history_of_segregation_2:0 "History of Segregation"
